...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_activity_greeting_message"
                    android:textColor="@color/black"
                    android:textSize="40sp" />

            </LinearLayout>

            <LinearLayout
...
                    android:id="@+id/continue_with_google_button"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_blue"
                    android:drawableLeft="@drawable/google_icon"
                    android:elevation="5dp"
                    android:text="@string/continue_with_google"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    app:cornerRadius="10dp" />

            </LinearLayout>

...
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <EditText
                    android:id="@+id/user_first_name"
                    android:layout_width="339dp"
                    android:layout_height="70dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edit_text_shape"
                    android:hint="First Name"
                    android:inputType="textCapWords"
...
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <EditText
                    android:id="@+id/user_last_name"
                    android:layout_width="339dp"
                    android:layout_height="70dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edit_text_shape"
                    android:hint="Last Name"
                    android:inputType="textCapWords"
...
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <EditText
                    android:id="@+id/user_email_address"
                    android:layout_width="339dp"
                    android:layout_height="70dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edit_text_shape"
                    android:hint="Email Address"
                    android:inputType="textEmailAddress"
...
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_email_address_input"
                app:layout_constraintVertical_bias="0.695">

                <EditText
                    android:id="@+id/user_password"
                    android:layout_width="339dp"
                    android:layout_height="70dp"
                    android:autofillHints="password"
                    android:background="@drawable/edit_text_shape"
                    android:hint="Password"
                    android:inputType="textPassword"
...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_activity_user_agreement" />

                <TextView
                    android:id="@+id/tv_terms_of_use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/signup_activity_our_terms_of_use_and_privacy_notice"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login_button"
...
                <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="192dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/orange"
                    android:elevation="5dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    app:cornerRadius="100dp" />

            </LinearLayout>
        </LinearLayout>
...
