<resources>
    <string name="app_name">Papilio</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="alert_dialog_accept">Accept</string>
    <string name="papilio_slogan">Activities at your Fingertips</string>

    <string name="title_activity_initial_page">InitialPage</string>
    <string name="login_activity_greeting_message">Welcome Back!</string>
    <string name="login_activity_login_to_your_account">Log into your account</string>
    <string name="login_activity_login_no_have_account">Don\'t have an account?</string>
...
